# PluginWithPluginVal

./: CMakeLists.txt  README.md
Modules/: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/MinimalPluginTemplate/: CMakeLists.txt
